--- a/app.css
+++ b/app.css
@@ -1,15 +1,15 @@
-.logo img{
-    height: 100px;
-    width: 100px;
+.logo img {
+  height: 100px;
+  width: 100px;
 }
 
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
 }
 
-ul {
+/* ul {
    
     display: flex;
     justify-content: space-between;
@@ -18,20 +18,43 @@ ul li{
     margin: 10px;
     padding: 10px;
     list-style: none;
+} */
+
+/*======================
+    404 page
+=======================*/
+
+.page_404 {
+  padding: 40px 0;
+  background: #fff;
+  font-family: "Arvo", serif;
 }
 
-.cardContainer img{
-    height: 100px;
-    width: 100px;
+.page_404 img {
+  width: 100%;
 }
 
-.cardContainer {
-    display: flex;
-}
-.cardContainer div{
-    border: 1px solid black;
+.four_zero_four_bg {
+  background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+  height: 400px;
+  background-position: center;
 }
 
-.resCard{
-    border: 1px solid black;
+.four_zero_four_bg h1 {
+  font-size: 80px;
+}
+
+.four_zero_four_bg h3 {
+  font-size: 80px;
+}
+
+.link_404 {
+  color: #fff !important;
+  padding: 10px 20px;
+  background: #39ac31;
+  margin: 20px 0;
+  display: inline-block;
+}
+.contant_box_404 {
+  margin-top: -50px;
 }
